--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -1,74 +1,87 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net452" />
-  <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
-  <package id="BundleTransformer.Core" version="1.10.0" targetFramework="net452" />
-  <package id="BundleTransformer.SassAndScss" version="1.10.0" targetFramework="net452" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="LibSassHost" version="1.2.2" targetFramework="net452" />
-  <package id="LibSassHost.Native.win-x86" version="1.2.0" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net452" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net452" />
-  <package id="MingweiSamuel.Camille" version="2.2.0" targetFramework="net452" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="Owin.Security.Providers.Reddit" version="2.7.0" targetFramework="net452" />
-  <package id="SimpleInjector" version="3.2.0" targetFramework="net452" />
-  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net452" />
-  <package id="SimpleInjector.Integration.Web" version="3.2.0" targetFramework="net452" />
-  <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.1" targetFramework="net452" />
-  <package id="SimpleInjector.Integration.WebApi" version="3.2.0" targetFramework="net452" />
-  <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net452" />
-  <package id="System.Collections" version="4.3.0" targetFramework="net452" />
-  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net452" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
-  <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
-  <package id="System.IO" version="4.3.0" targetFramework="net452" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net452" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net452" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
-  <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
-  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net452" />
-  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
-  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net452" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
-  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" />
-  <package id="System.Threading" version="4.3.0" targetFramework="net452" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
-  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
-  <package id="WebGrease" version="1.6.0" targetFramework="net452" />
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net461" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="BundleTransformer.Core" version="1.10.0" targetFramework="net461" />
+  <package id="BundleTransformer.SassAndScss" version="1.10.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="LibSassHost" version="1.2.2" targetFramework="net461" />
+  <package id="LibSassHost.Native.win-x86" version="1.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net461" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="MingweiSamuel.Camille" version="2.2.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Owin.Security.Providers.Reddit" version="2.7.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="3.2.0" targetFramework="net461" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web" version="3.2.0" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.1" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.WebApi" version="3.2.0" targetFramework="net461" />
+  <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net461" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
+  <package id="System.Console" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
