--- a/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
+++ b/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
@@ -190,6 +190,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="netstandard, Version=2.0.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Jobs\SubredditCssUpdateJob.cs" />
