--- a/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
+++ b/ChampionMains.Pyrobot.Infrastructure/ChampionMains.Pyrobot.Infrastructure.csproj
@@ -69,9 +69,6 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Reddit.NET, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Reddit.1.1.1\lib\netstandard2.0\Reddit.NET.dll</HintPath>
-    </Reference>
     <Reference Include="RestSharp, Version=106.6.9.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.106.6.9\lib\net452\RestSharp.dll</HintPath>
     </Reference>
@@ -174,6 +171,10 @@
     <ProjectReference Include="..\ChampionMains.Pyrobot.Data\ChampionMains.Pyrobot.Data.csproj">
       <Project>{0684e3ec-de9d-409b-8ccd-c3566763a2a7}</Project>
       <Name>ChampionMains.Pyrobot.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Reddit.NET\src\Reddit.NET\Reddit.NET.csproj">
+      <Project>{146A80AD-777F-42F4-9C2F-426B7FE40588}</Project>
+      <Name>Reddit.NET</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
