--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "Reddit.NET"]
 	path = Reddit.NET
-	url = https://github.com/sirkris/Reddit.NET.git
+	url = https://github.com/ChampionMains/Reddit.NET.git
 	branch = develop
