set bulk update batch sizes from config

--- a/ChampionMains.Pyrobot.WebJob/App.template.config
+++ b/ChampionMains.Pyrobot.WebJob/App.template.config
@@ -31,6 +31,9 @@
     <add key="webjob.maxAttempts" value="1" />
     <add key="webjob.pollingInterval" value="00:00:03.000" />
     <add key="webjob.timeout.bulkUpdate" value="00:30:00.000" />
+    <add key="webjob.bulkUpdate.saveBatchSize" value="100" />
+    <add key="webjob.bulkUpdate.updateBatchSize" value="100" />
+    <add key="webjob.bulkUpdate.updateNumBatches" value="2" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
