--- a/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
+++ b/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
@@ -51,8 +51,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Camille, Version=2.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MingweiSamuel.Camille.2.2.1\lib\net45\Camille.dll</HintPath>
+    <Reference Include="Camille, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MingweiSamuel.Camille.2.2.2\lib\net45\Camille.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -211,6 +211,7 @@
     <None Include="App.Example.Config" />
     <None Include="App.Local.config">
       <DependentUpon>App.template.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
     <!-- - -->
