BulkUpdateJob now checks for mod to subreddits, checks when selecting flairs to update

--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -223,6 +223,10 @@
     <Compile Include="Migrations\201908311901539_subreddit-add-missingadmin.Designer.cs">
       <DependentUpon>201908311901539_subreddit-add-missingadmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201908312109104_subreddit-rename-missingadmin-to-missingmod.cs" />
+    <Compile Include="Migrations\201908312109104_subreddit-rename-missingadmin-to-missingmod.Designer.cs">
+      <DependentUpon>201908312109104_subreddit-rename-missingadmin-to-missingmod.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\CreatedModelBase.cs" />
@@ -352,6 +356,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201908311901539_subreddit-add-missingadmin.resx">
       <DependentUpon>201908311901539_subreddit-add-missingadmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201908312109104_subreddit-rename-missingadmin-to-missingmod.resx">
+      <DependentUpon>201908312109104_subreddit-rename-missingadmin-to-missingmod.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
