Update BulkUpdateJob to update flairs by subreddit rather than by flair

--- a/ChampionMains.Pyrobot.WebJob/App.template.config
+++ b/ChampionMains.Pyrobot.WebJob/App.template.config
@@ -34,6 +34,7 @@
     <add key="webjob.bulkUpdate.saveBatchSize" value="100" />
     <add key="webjob.bulkUpdate.updateBatchSize" value="100" />
     <add key="webjob.bulkUpdate.updateNumBatches" value="2" />
+    <add key="webjob.bulkUpdate.updateFlairsNumSubreddits" value="3" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
