--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -17,6 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RouteDebugger:Enabled" value="false" />
     
     <add key="reddit.auth.clientId" value="" />
     <add key="reddit.auth.clientSecret" value="" />
