--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -34,6 +34,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.Reddit" version="2.7.0" targetFramework="net461" />
+  <package id="routedebugger" version="2.1.5" targetFramework="net461" />
   <package id="SimpleInjector" version="3.2.0" targetFramework="net461" />
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net461" />
   <package id="SimpleInjector.Integration.Web" version="3.2.0" targetFramework="net461" />
