reorganizing services a bit

--- a/ChampionMains.Pyrobot.Test/App.template.config
+++ b/ChampionMains.Pyrobot.Test/App.template.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="reddit.auth.clientId" value="Bmf2qtPKIBSAtw" />
-    <add key="reddit.auth.clientSecret" value="kxMfFnKqwowTV0u7H6djhQ4s_LI" />
-    <add key="reddit.script.clientId" value="VLpzPJF1Ibx3vQ" />
-    <add key="reddit.script.clientSecret" value="3STWEIXzoGeiHdX0V-J--m9pYdw" />
+    <add key="reddit.auth.clientId" value="" />
+    <add key="reddit.auth.clientSecret" value="" />
+    <add key="reddit.script.clientId" value="" />
+    <add key="reddit.script.clientSecret" value="" />
     <add key="reddit.modUserName" value="ChampionMainsBot" />
-    <add key="reddit.modPassword" value="TuhfuC8zzqQ36kquhLfU24VEKhSBvmCu4KK7NegJJ8dKH8sv" />
+    <add key="reddit.modPassword" value="" />
 
     <add key="riot.apiKey" value="" />
     <add key="riot.maxAttempts" value="3" />
