--- a/ChampionMains.Pyrobot.Test/packages.config
+++ b/ChampionMains.Pyrobot.Test/packages.config
@@ -6,4 +6,6 @@
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="RestSharp" version="106.6.9" targetFramework="net461" />
+  <package id="SimpleInjector" version="3.2.0" targetFramework="net461" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="3.2.0" targetFramework="net461" />
 </packages>
