adding emoji upload, almost working

--- a/ChampionMains.Pyrobot.Test/ChampionMains.Pyrobot.Test.csproj
+++ b/ChampionMains.Pyrobot.Test/ChampionMains.Pyrobot.Test.csproj
@@ -47,7 +47,7 @@
       <HintPath>..\packages\MSTest.TestFramework.1.1.11\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="MingweiSamuel.Reddit.NET, Version=1.2.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MingweiSamuel.Reddit.NET.2.2.1-develop\lib\netstandard2.0\MingweiSamuel.Reddit.NET.dll</HintPath>
+      <HintPath>..\packages\MingweiSamuel.Reddit.NET.2.2.2-develop\lib\netstandard2.0\MingweiSamuel.Reddit.NET.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -67,6 +67,7 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MemoryFile.cs" />
     <Compile Include="RedditServiceTest.cs" />
     <Compile Include="TestSimpleInjector.cs" />
     <Compile Include="ValidationServiceTest.cs" />
@@ -90,6 +91,11 @@
       <Project>{55C0978C-F23E-43E6-80B3-4FEC1993C5C9}</Project>
       <Name>ChampionMains.Pyrobot.Startup</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="cm-icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
