Bulk update only send changed flairs

--- a/ChampionMains.Pyrobot.Test/ChampionMains.Pyrobot.Test.csproj
+++ b/ChampionMains.Pyrobot.Test/ChampionMains.Pyrobot.Test.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlairServiceTest.cs" />
     <Compile Include="ValidationServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
